# tlapack

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Comparison_with_BLAS++.md  INSTALL.md  LICENSE  Makefile  README.md  notes.md  pythonmatrix.ipynb  version.txt
config/: CMakeLists.txt  version.cpp  version.h.in
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  groups.dox  tlapack.graphml  tlapack_v0.graphml
examples/: CMakeLists.txt  README.md  example_cwrapper_gemm.c  example_fortranInterface_daxpy.f90  example_fortranModule_saxpy.f90  example_fortranWrapper_daxpy.f90  example_fortranWrapper_saxpy.f90  example_gemm.cpp  example_geqr.cpp  example_geqr2.cpp  version.cpp
examples/access_types/: CMakeLists.txt  Makefile  README.md  example_accessTypes.cpp  make.inc
examples/cpp_visualizer/: CMakeLists.txt  cpp_visualizer_example.cpp
examples/create_float_library/: CMakeLists.txt  Makefile  README.md  main.cpp  make.inc  tlapack_EigenMatrixXf.cpp  tlapack_EigenMatrixXf.hpp
examples/cwrapper_gemm/: CMakeLists.txt  Makefile  README.md  example_cwrapper_gemm.c  make.inc
examples/eigen/: CMakeLists.txt  Makefile  README.md  example_eigen.cpp  make.inc
examples/eigen/performance_eigen/: Makefile  make.inc  runWIthMKL.ipynb
examples/eigenMatrix/: CMakeLists.txt  Makefile  example_eigenMatrix.cpp  make.inc
examples/eigenvalues/: CMakeLists.txt  Makefile  example_eigenvalues.cpp  fortran_wrappers.f90  make.inc  profile_aed.cpp  slaqr0.f  slaqr2.f  slaqr5.f  testoutput2.txt
examples/eigenvalues/src/: fortran_wrappers.f90
examples/example_mult_hehe/: CMakeLists.txt  example_mult_hehe.cpp
examples/extreme_interoperability/: CMakeLists.txt  Makefile  README.md  example_interoperability.cpp  make.inc
examples/fortranModule_caxpy/: CMakeLists.txt  Makefile  README.md  example_fortranModule_caxpy.f90  make.inc
examples/fortranModule_ssymm/: CMakeLists.txt  Makefile  README.md  example_fortranModule_ssymm.f90
examples/fortranWrapper_ssymm/: CMakeLists.txt  Makefile  README.md  example_fortranWrapper_ssymm.f90  make.inc
examples/gehd2/: CMakeLists.txt  example_gehd2.cpp
examples/gelqt3/: CMakeLists.txt  Makefile  README.md  example_gelqt3.cpp  make.inc
examples/gemm/: CMakeLists.txt  Makefile  README.md  example_gemm.cpp  make.inc
examples/gemm/cmake/: FindGMP.cmake  FindMPFR.cmake
examples/geqp2/: CMakeLists.txt  Makefile  README.md  example_geqp2.cpp  geqp2.hpp
examples/geqr2/: CMakeLists.txt  Makefile  README.md  example_geqr2.cpp  make.inc
examples/geqrf_preprocessed/: CMakeLists.txt  Makefile  README.md  example_geqrf_preprocessed.cpp
examples/geqrf_preprocessed_square/: CMakeLists.txt  README.md  example_geqrf_preprocessed_square.cpp
examples/geqrt3/: CMakeLists.txt  Makefile  README.md  example_geqrt3.cpp
examples/geqrtr/: CMakeLists.txt  example_geqrtr.cpp
examples/interoperability/: CMakeLists.txt  README.md  example_interoperability.cpp
examples/interpretAsMatrix/: CMakeLists.txt  example_interpretAsMatrix.cpp
examples/laed4/: CMakeLists.txt  example_laed4.cpp  example_laed4_brian.cpp  example_laed4_gragg.cpp  example_laed4_sorensen_tang.cpp
examples/lu/: CMakeLists.txt  example_lu.cpp  mpreal.h  rescale.hpp
examples/lu/cmake/: FindGMP.cmake  FindMPFR.cmake
examples/mdspan/: CMakeLists.txt  Makefile  README.md  example_mdspan.cpp  make.inc  scaledAccessor.h  tiledLayout.h
examples/performance_eigen/: CMakeLists.txt  performance_eigen.cpp  performance_tlapack.cpp  runWIthMKL.ipynb
examples/potrf/: CMakeLists.txt  example_potrf.cpp
examples/potri/: CMakeLists.txt  Makefile  example_potri.cpp
examples/rgeqrf/: CMakeLists.txt  Makefile  README.md  example_rgeqrf.cpp
examples/starpu/: CMakeLists.txt  compare_with_mkl.cpp  example_gemm.cpp  example_lapack.cpp  example_lu.cpp  example_multishiftqr.cpp  example_potrf.cpp  example_starpu.cpp  run_potrf.ipynb
examples/tikhonov_regularization/: CMakeLists.txt  example_tik_multi_lam.cpp  example_tikhonov_regularization.cpp  tik_check.hpp  tik_chol.hpp
examples/trge_qr/: CMakeLists.txt  example_trge_qr.cpp
examples/trmm_bfloat16/: CMakeLists.txt  example_trmm_mixed.cpp
examples/trmm_out/: CMakeLists.txt  example_trmm_out.cpp
examples/unblocked_QR/: CMakeLists.txt  make.inc
src/: CMakeLists.txt  blas.f90  blas.f90.in  blas.fi.in  cblas.fi.in  cwrappers_tblas.cpp  fortranWrappers_tblas.f90  fortranwrappers_tblas.f90.in  tblas.f90  tblas.fi.in  tblas_cwrappers.cpp  tblas_fortranwrappers.f90.in  tlapack.f90  tlapack.fi.in  tlapack_cwrappers.cpp  xerbla.cpp
src/base/: constants.f90.in
src/blas/: axpy.f90  constants.f90.in  exception.cpp  nrm2.f90  symm.f90
src/utils/: getNumBytes.c.in
test/: CMakeLists.txt  tests_main.cpp
test/blas/: CMakeLists.txt  Makefile  defines.hpp  make.inc  tests_main.cpp  version.txt
test/blas/include/: test_types.hpp
test/blas/scripts/: blas_routines.csv  returnImmediately_corner_rules.csv  returnImmediately_corner_tests.csv  throwException_corner_rules.csv  wrapper_tests.py  (+1 more)
test/blaspp/: CMakeLists.txt  blas.hh  run_blaspp_tester.py  test.cpp
test/include/: MatrixMarket.hpp  NaNPropagComplex.hpp  TestUploMatrix.hpp  testdefinitions.hpp  testutils.hpp
test/lapackpp/: CMakeLists.txt  lapack.hh  run_lapackpp_tester.py  test.cpp
test/src/: CMakeLists.txt  est_lqf.cpp  test_bidiag.cpp  test_binomial.cpp  test_blocked_francis.cpp  test_cauchy.cpp  test_concepts.cpp  test_eigenplugin.cpp  test_eigenvalue_utils.cpp  test_gebd2.cpp  test_gebrd.cpp  test_gehrd.cpp  test_gelq2.cpp  test_gelqf.cpp  test_gelqt.cpp  test_gelqt3.cpp  test_gels.cpp  test_gemmtr.cpp  test_generalized_aed.cpp  test_generalized_schur_move.cpp  test_generalized_schur_swap.cpp  test_geql2.cpp  test_geqlf.cpp  test_geqp2.cpp  test_geqpf.cpp  test_geqr2.cpp  test_geqrf.cpp  test_geqrt3.cpp  test_gerq2.cpp  test_gerqf.cpp  test_gesvd.cpp  test_getrf.cpp  test_getrf2.cpp  test_getri.cpp  test_hemm2.cpp  test_hemm_brian.cpp  test_hessenberg.cpp  test_hessenberg_rq.cpp  test_hessenbergtriangular.cpp  test_hessenbergtriangular_blocked.cpp  (+81 more)
(+1096 files in other folders)
